# incubyte-learning-planner

./: .gitignore  PROBLEM_STATEMENT.md
FastAPI_App/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
FastAPI_App/alembic/: env.py
FastAPI_App/alembic/versions/: beab4aa24219_create_documents_and_processing_tables.py
FastAPI_App/app/: main.py
FastAPI_App/app/api/v1/: documents.py  jobs.py
FastAPI_App/app/core/: config.py  database.py  errors.py  logging.py  middleware.py
FastAPI_App/app/dependencies/: db.py  services.py  temporal.py
FastAPI_App/app/models/: __init__.py  document.py  processing_job.py  processing_result.py
FastAPI_App/app/repositories/: document_repository.py  interfaces.py  job_repository.py
FastAPI_App/app/schemas/: document.py  processing_job.py
FastAPI_App/app/services/: document_service.py  processing_engine.py  processing_service.py
FastAPI_App/app/temporal/: activities.py  worker.py  workflows.py
FastAPI_App/scripts/: migrate_and_start.sh
FastAPI_App/tests/: conftest.py  test_documents.py  test_jobs.py  test_validation.py
FastAPI_App/tests/fakes/: fake_document_repository.py  fake_job_repository.py
FastAPI_App/tests/temporal/: test_workflow_integration.py
FastAPI_App/tests/unit/: conftest.py  test_document_service.py  test_processing_engine.py  test_processing_service.py
docs/: curriculum.md
docs/adr/: 001-repository-pattern.md  002-async-sqlalchemy-asyncpg.md  003-background-tasks-for-processing.md  (+2 more)
temporal_hello/: activities.py  run_workflow.py  worker.py  workflow.py
(+2 files in other folders)
