[project]
name = "fastapi-app"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13.9"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-json-logger>=4.1.0",
    "python-multipart>=0.0.32",
    "sqlalchemy[asyncio]>=2.0.50",
    "temporalio>=1.29.0",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "anyio>=4.13.0",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
]
